Fix page loading z-index top

--- a/ph/themes/CO2/assets/css/CO2/CO2.css
+++ b/ph/themes/CO2/assets/css/CO2/CO2.css
@@ -1326,6 +1326,8 @@ a, a:hover, a:focus, a:active, a.active{
 	top:0px!important;
 	min-height: 1000px!important;
 	padding-top: 105px!important;
+    /* add pour masquer menutop durant loading*/
+    z-index: 100000 !important;
 }
 
 .blockUI.blockMsg.blockPage img{
